testsuite/poke.pkl/int-struct-type-diag-4.pk
/* { dg-do compile } */

type Foo =
  struct int<32>
  {
    int<32> i;
    int<32>[] je; /* { dg-error "invalid field" } */
  };
